<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.citrus.skillcinema.presentation.searchpage.settings.SearchSettingsViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_settings_back_btn"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/back"
                android:drawableEnd="@drawable/all_movies_back_item"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/search_settings_title"
                style="@style/SkillCinemaText.BoldText"
                android:layout_width="244dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/search_settings"
                android:textAlignment="center" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SkillCinemaText.GreyText"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/show" />

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            android:padding="0dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_settings_all"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/all"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                app:checkedIconEnabled="false"
                app:shapeAppearanceOverlay="@style/LeftChipShape" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_settings_movies"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/movies"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                app:checkedIconEnabled="false"
                app:shapeAppearanceOverlay="@style/BothChipShape" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_settings_series"
                android:layout_width="110dp"
                android:layout_height="48dp"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:text="@string/series"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                app:checkedIconEnabled="false"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:shapeAppearanceOverlay="@style/RightChipShape" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SkillCinemaText.NormalText"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/country"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings_country_text_view"
                style="@style/SkillCinemaText.GreyText"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="155dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/grey_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SkillCinemaText.NormalText"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/genre"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings_genre_text_view"
                style="@style/SkillCinemaText.GreyText"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="175dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd"

                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/grey_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SkillCinemaText.NormalText"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/year"
                android:textAlignment="textStart" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings_year_text_view"
                style="@style/SkillCinemaText.GreyText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="160dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/grey_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/SkillCinemaText.NormalText"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/rating"
                    android:textAlignment="textStart" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/settings_rating_text_view"
                    style="@style/SkillCinemaText.GreyText"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginEnd="30dp"
                    android:textAlignment="textEnd" />


            </LinearLayout>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangeSlider"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/choose_rating"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="10"
                app:haloColor="@color/black"
                app:haloRadius="12dp"
                app:thumbColor="@color/white"
                app:thumbRadius="12dp"
                app:thumbStrokeColor="@color/black"
                app:thumbStrokeWidth="1dp"
                app:trackColor="@color/app_blue"
                app:trackHeight="4dp"
                app:values="@array/initial_range_values" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/minValueText"
                    style="@style/SkillCinemaText.GreyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/_1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/maxValueText"
                    style="@style/SkillCinemaText.GreyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="290dp"
                    android:text="@string/_10"
                    android:textSize="14sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:background="@color/grey_text" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SkillCinemaText.GreyText"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sort" />


        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            android:padding="0dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_settings_date"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/date"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                app:checkedIconEnabled="false"
                app:shapeAppearanceOverlay="@style/LeftChipShape" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_settings_popularity"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/popularity"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                app:checkedIconEnabled="false"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:shapeAppearanceOverlay="@style/BothChipShape" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_settings_rating"
                android:layout_width="110dp"
                android:layout_height="48dp"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:text="@string/rating"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipStrokeColor="@color/black"
                app:chipStrokeWidth="1dp"
                app:checkedIconEnabled="false"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:shapeAppearanceOverlay="@style/RightChipShape" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@color/grey_text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:id="@+id/check_box_watched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/app_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hide_text_view"
                style="@style/SkillCinemaText.NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:text="@string/hide_watched" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/app_blue"
            android:text="@string/accept"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.942" />


    </LinearLayout>


</layout>