<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/country_and_genre_back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:drawableEnd="@drawable/all_movies_back_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.002"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/back"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/country_and_genre_title"
            style="@style/SkillCinemaText.BoldText"
            android:layout_width="244dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/country"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="39dp"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.128" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/appCompatEditText"
            android:layout_width="332dp"
            android:layout_height="60dp"
            android:hint="@string/enter_country"
            android:paddingStart="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.117"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/country_or_genre_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="570dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatEditText"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/country_and_genre_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>